fix: streetmode selector height on mobile

--- a/app/component/StreetModeSelector.scss
+++ b/app/component/StreetModeSelector.scss
@@ -13,5 +13,6 @@
 .mobile {
   .street-mode-selector-container {
     height: 77px;
+    min-height: 77px;
   }
 }
